--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "@types/chrome": "0.0.188",
     "@types/encoding-japanese": "^2.0.0",
-    "encoding-japanese": "^2.0.0"
+    "encoding-japanese": "^2.0.0",
+    "esbuild": "^0.14.43",
+    "esbuild-plugin-globals": "^0.1.1"
   }
 }
