--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -1,20 +1,12 @@
 {
-    "manifest_version": 3,
-    "name": "e-timecard-extension",
-    "description": "",
-    "version": "1.0",
-    "action": {
-        "default_title": "e-timecard-extension",
-        "default_popup": "popup.html"
-    },
-    "permissions": [
-        "debugger",
-        "downloads",
-        "tabs",
-        "storage",
-        "scripting"
-    ],
-    "host_permissions": [
-        "https://e-timecard.ne.jp/*"
-    ]
+  "manifest_version": 3,
+  "name": "e-timecard-extension",
+  "description": "",
+  "version": "1.0",
+  "action": {
+    "default_title": "e-timecard-extension",
+    "default_popup": "popup.html"
+  },
+  "permissions": ["debugger", "downloads", "tabs", "storage", "scripting"],
+  "host_permissions": ["https://e-timecard.ne.jp/*"]
 }
