--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "esbuild --bundle --sourcemap src/main.ts --outfile=dist/bundle.js --servedir=dist",
-    "test": "npm run test"
+    "test": "npm run test",
+    "watch": "esbuild --bundle --sourcemap src/main.ts --outfile=dist/bundle.js --watch"
   },
   "repository": {
     "type": "git",
